# gower

./: README.md  pyproject.toml
gower/: gower_dist.py
gower_multiprocessing/: gower_dist.py
tests/: matrix_test.py
