[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gower-multiprocessing"
version = "0.2.1"
authors = [
  { name="Michael Yan" },
  { name="Dominic D"},
  { name="Szymon Bobek",email="szymon.bobek@gmail.com"}
]
description = "Python implementation of Gowers distance, pairwise between records in two data sets with multiprocessing support"
readme = "README.md"
requires-python = ">=2.7"
keywords=['gower', 'distance', 'matrix']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sbobek/gower"
